force-app/main/default/objects/Student__c/fields/AddressP__c.field-meta.xml
<CustomField>
    <fullName>AddressP__c</fullName>
    <label>Permanent Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>