force-app/main/default/objects/Student__c/fields/Application_on_File__c.field-meta.xml
<CustomField>
    <fullName>Application_on_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Application on File?</label>
    <type>Checkbox</type>
</CustomField>