force-app/main/default/objects/Student__c/fields/CE_Status__c.field-meta.xml
<CustomField>
    <fullName>CE_Status__c</fullName>
    <description>Latest status in the company.</description>
    <label>CE Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2010 Convention Contact</fullName>
            </value>
            <value>
                <fullName>2010 Northeast Conference Contact</fullName>
            </value>
            <value>
                <fullName>2011 NACA Mid America Delegate</fullName>
            </value>
            <value>
                <fullName>2011 NACA Northeast Delegate</fullName>
            </value>
            <value>
                <fullName>2011 NACA South Delegate</fullName>
            </value>
            <value>
                <fullName>Applicant</fullName>
            </value>
            <value>
                <fullName>Blackboard Fall 2012 Applicant</fullName>
            </value>
            <value>
                <fullName>Blackboard Fall 2012 Promoter</fullName>
            </value>
            <value>
                <fullName>Blackboard Summer 2012 Applicant</fullName>
            </value>
            <value>
                <fullName>Blackboard Summer 2012 Promoter</fullName>
            </value>
            <value>
                <fullName>Career Services Interested</fullName>
            </value>
            <value>
                <fullName>CashCourse Fall 2010 Applicant</fullName>
            </value>
            <value>
                <fullName>CashCourse Fall 2010 Promoter</fullName>
            </value>
            <value>
                <fullName>CashCourse Spring 2011 Applicant</fullName>
            </value>
            <value>
                <fullName>CashCourse Spring 2011 Promoter</fullName>
            </value>
            <value>
                <fullName>Cengage Spring 2013 Applicant</fullName>
            </value>
            <value>
                <fullName>Cengage Spring 2013 Promoter</fullName>
            </value>
            <value>
                <fullName>Citizens Fall 2009 Applicant</fullName>
            </value>
            <value>
                <fullName>Citizens Fall 2009 Promoter</fullName>
            </value>
            <value>
                <fullName>Citizens Loan Spring 2010 Applicant</fullName>
            </value>
            <value>
                <fullName>Citizens Loan Spring 2010 Promoter</fullName>
            </value>
            <value>
                <fullName>Copia Fall 2011 Applicant</fullName>
            </value>
            <value>
                <fullName>Copia Fall 2011 Promoter</fullName>
            </value>
            <value>
                <fullName>Current Student Promoter</fullName>
            </value>
            <value>
                <fullName>Dropped Rep</fullName>
            </value>
            <value>
                <fullName>Event Staff</fullName>
            </value>
            <value>
                <fullName>FYE Fall 2009 Applicant</fullName>
            </value>
            <value>
                <fullName>FYE Fall 2009 Event Staff</fullName>
            </value>
            <value>
                <fullName>FYE Fall 2009 Promoter</fullName>
            </value>
            <value>
                <fullName>IKEA Fall 2009 Applicant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>