force-app/main/default/objects/Student__c/fields/Current_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Current_Account_Manager__c</fullName>
    <label>Current Account Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adam Feldman</fullName>
            </value>
            <value>
                <fullName>Amanda Little</fullName>
            </value>
            <value>
                <fullName>Andrew Lickenbrock</fullName>
            </value>
            <value>
                <fullName>Anthony Enslow</fullName>
            </value>
            <value>
                <fullName>Ashley Canning</fullName>
            </value>
            <value>
                <fullName>Ashley Dohn</fullName>
            </value>
            <value>
                <fullName>Bailey Stoner</fullName>
            </value>
            <value>
                <fullName>Caitlin Quinn</fullName>
            </value>
            <value>
                <fullName>Christina Forte</fullName>
            </value>
            <value>
                <fullName>Cristina Visconte</fullName>
            </value>
            <value>
                <fullName>Jasmine O&apos;Neil</fullName>
            </value>
            <value>
                <fullName>Jessie Maier</fullName>
            </value>
            <value>
                <fullName>Jill Scangas</fullName>
            </value>
            <value>
                <fullName>Kelley Gauthier</fullName>
            </value>
            <value>
                <fullName>Kim Talarczyk</fullName>
            </value>
            <value>
                <fullName>Laura (Hutto) Bryant</fullName>
            </value>
            <value>
                <fullName>Laura Bundrick</fullName>
            </value>
            <value>
                <fullName>Lindsay Johnson</fullName>
            </value>
            <value>
                <fullName>Lindsay Vaughn</fullName>
            </value>
            <value>
                <fullName>Lindsey Turner</fullName>
            </value>
            <value>
                <fullName>Marc Fraccero</fullName>
            </value>
            <value>
                <fullName>Matt Fasano</fullName>
            </value>
            <value>
                <fullName>Rachel Spekman</fullName>
            </value>
            <value>
                <fullName>Rebecca D&apos;Attilio</fullName>
            </value>
            <value>
                <fullName>Roisin O&apos;Flaherty</fullName>
            </value>
            <value>
                <fullName>Scott Jacobs</fullName>
            </value>
            <value>
                <fullName>Victoria Oliver</fullName>
            </value>
            <value>
                <fullName>Winnie Phung</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>