force-app/main/default/objects/Student__c/fields/Current_Program_Notes__c.field-meta.xml
<CustomField>
    <fullName>Current_Program_Notes__c</fullName>
    <inlineHelpText>Ex: Only worked 8 weeks during spring 2013 for UCrew.</inlineHelpText>
    <label>Current Program Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>