force-app/main/default/objects/Student__c/fields/Currently_employed_by_CE__c.field-meta.xml
<CustomField>
    <fullName>Currently_employed_by_CE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Currently employed by CE?</label>
    <type>Checkbox</type>
</CustomField>