force-app/main/default/objects/Student__c/fields/Do_Not_Contact__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact__c</fullName>
    <label>Do Not Contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact</fullName>
                <default>true</default>
                <label>Contact</label>
            </value>
            <value>
                <fullName>Do Not Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>