force-app/main/default/objects/Student__c/fields/Graduation_Date__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Date__c</fullName>
    <label>Graduation Date</label>
    <length>15</length>
    <type>Text</type>
</CustomField>