force-app/main/default/objects/Student__c/fields/Housing_Plans__c.field-meta.xml
<CustomField>
    <fullName>Housing_Plans__c</fullName>
    <label>Housing Plans</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>At home with parents</fullName>
            </value>
            <value>
                <fullName>Greek house</fullName>
            </value>
            <value>
                <fullName>Greek residence hall</fullName>
            </value>
            <value>
                <fullName>Home near campus</fullName>
            </value>
            <value>
                <fullName>On campus residence hall</fullName>
            </value>
            <value>
                <fullName>Don&apos;t know yet</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>