force-app/main/default/objects/Student__c/fields/Intramurals__c.field-meta.xml
<CustomField>
    <fullName>Intramurals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the student participate in intramurals?</description>
    <label>Intramurals</label>
    <type>Checkbox</type>
</CustomField>