force-app/main/default/objects/Student__c/fields/Kellogg_s_Distribution_Status__c.field-meta.xml
<CustomField>
    <fullName>Kellogg_s_Distribution_Status__c</fullName>
    <formula>TEXT(School__r.Kellogg_s_Distribution_Status__c)</formula>
    <label>Kellogg&apos;s Distribution Status</label>
    <type>Text</type>
</CustomField>