force-app/main/default/objects/Student__c/fields/Klout_Score__c.field-meta.xml
<CustomField>
    <fullName>Klout_Score__c</fullName>
    <label>Klout Score</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>