force-app/main/default/objects/Student__c/fields/Marketing_Association__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Association__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Association</label>
    <type>Checkbox</type>
</CustomField>