force-app/main/default/objects/Student__c/fields/Minor__c.field-meta.xml
<CustomField>
    <fullName>Minor__c</fullName>
    <label>Minor</label>
    <length>60</length>
    <type>Text</type>
</CustomField>