force-app/main/default/objects/Student__c/fields/Names_of_Organizations__c.field-meta.xml
<CustomField>
    <fullName>Names_of_Organizations__c</fullName>
    <label>Names of Organizations/Activities</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>