force-app/main/default/objects/Student__c/fields/Number_of_Semesters_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Semesters_Remaining__c</fullName>
    <label>Number of Semesters Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>