force-app/main/default/objects/Student__c/fields/of_Email_Contacts__c.field-meta.xml
<CustomField>
    <fullName>of_Email_Contacts__c</fullName>
    <label># of Email Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>