force-app/main/default/objects/Student__c/fields/of_Text_Contacts__c.field-meta.xml
<CustomField>
    <fullName>of_Text_Contacts__c</fullName>
    <label># of Text Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>