force-app/main/default/objects/Student__c/fields/of_Vine_Followers__c.field-meta.xml
<CustomField>
    <fullName>of_Vine_Followers__c</fullName>
    <label># of Vine Followers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>