force-app/main/default/objects/Student__c/fields/Permanent_Address_cont__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Address_cont__c</fullName>
    <label>Permanent Address (cont.)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>