force-app/main/default/objects/Student__c/fields/Permanent_City__c.field-meta.xml
<CustomField>
    <fullName>Permanent_City__c</fullName>
    <label>Permanent City</label>
    <length>25</length>
    <type>Text</type>
</CustomField>