force-app/main/default/objects/Student__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blackboard Fall 2012</fullName>
            </value>
            <value>
                <fullName>Blackboard Summer 2012</fullName>
            </value>
            <value>
                <fullName>CashCourse Fall 2010</fullName>
            </value>
            <value>
                <fullName>CashCourse Spring 2011</fullName>
            </value>
            <value>
                <fullName>Cengage Spring 2013</fullName>
            </value>
            <value>
                <fullName>Citizens Fall 2009</fullName>
            </value>
            <value>
                <fullName>Citizens Loan Spring 2010</fullName>
            </value>
            <value>
                <fullName>Copia Fall 2011</fullName>
            </value>
            <value>
                <fullName>FYE Fall 2009</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>IKEA Fall 2009</fullName>
            </value>
            <value>
                <fullName>Kotex Spring 2013</fullName>
            </value>
            <value>
                <fullName>L&apos;Oreal Spring 2013</fullName>
            </value>
            <value>
                <fullName>Lenovo Spring 2012</fullName>
            </value>
            <value>
                <fullName>Macy&apos;s Spring 2013</fullName>
            </value>
            <value>
                <fullName>Maxim Fall 2010</fullName>
            </value>
            <value>
                <fullName>Maxim Spring 2010</fullName>
            </value>
            <value>
                <fullName>Microsoft Fall 2009</fullName>
            </value>
            <value>
                <fullName>Microsoft Fall 2010</fullName>
            </value>
            <value>
                <fullName>Microsoft Fall 2010 - Spring 2011</fullName>
            </value>
            <value>
                <fullName>Microsoft Spring 2010</fullName>
            </value>
            <value>
                <fullName>Microsoft Spring 2011</fullName>
            </value>
            <value>
                <fullName>Microsoft Spring 2011 Event</fullName>
            </value>
            <value>
                <fullName>MTV/Dove Fall 2011</fullName>
            </value>
            <value>
                <fullName>MTV Act of Valor Spring 2012</fullName>
            </value>
            <value>
                <fullName>MTVU Fall 2011</fullName>
            </value>
            <value>
                <fullName>PacSun Fall 2012</fullName>
            </value>
            <value>
                <fullName>PacSun Spring 2012</fullName>
            </value>
            <value>
                <fullName>PacSun Spring 2013</fullName>
            </value>
            <value>
                <fullName>Phase III Spring 2011</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>