force-app/main/default/objects/Student__c/fields/Program_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Program_Bonus__c</fullName>
    <inlineHelpText>N/A means no bonus was offered.</inlineHelpText>
    <label>Program Bonus</label>
    <length>20</length>
    <type>Text</type>
</CustomField>