force-app/main/default/objects/Student__c/fields/Program_Payment__c.field-meta.xml
<CustomField>
    <fullName>Program_Payment__c</fullName>
    <description>Please list the total program payment for the last program this student worked.</description>
    <label>Program Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>