force-app/main/default/objects/Student__c/fields/Referred_by__c.field-meta.xml
<CustomField>
    <fullName>Referred_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred by</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>