force-app/main/default/objects/Student__c/fields/Resume_on_file__c.field-meta.xml
<CustomField>
    <fullName>Resume_on_file__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resume on file?</label>
    <type>Checkbox</type>
</CustomField>