force-app/main/default/objects/Student__c/fields/Shirt_Size__c.field-meta.xml
<CustomField>
    <fullName>Shirt_Size__c</fullName>
    <label>Shirt Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>X-Large</fullName>
            </value>
            <value>
                <fullName>2X-Large</fullName>
            </value>
            <value>
                <fullName>3X-Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>