force-app/main/default/objects/Student__c/fields/Snapshot_on_File__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_on_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Snapshot on File?</label>
    <type>Checkbox</type>
</CustomField>