force-app/main/default/objects/Student__c/fields/StateP__c.field-meta.xml
<CustomField>
    <fullName>StateP__c</fullName>
    <label>Permanent State</label>
    <length>25</length>
    <type>Text</type>
</CustomField>