force-app/main/default/objects/Student__c/fields/Status_in_School__c.field-meta.xml
<CustomField>
    <fullName>Status_in_School__c</fullName>
    <label>Status in School</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Undergraduate Student</fullName>
            </value>
            <value>
                <fullName>Graduate Student</fullName>
            </value>
            <value>
                <fullName>Graduated/Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>