force-app/main/default/objects/Student__c/fields/Student_Government__c.field-meta.xml
<CustomField>
    <fullName>Student_Government__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Student Government</label>
    <type>Checkbox</type>
</CustomField>