force-app/main/default/objects/Student__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <label>Survey</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kellogg&apos;s Survey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>