force-app/main/default/objects/Student__c/fields/ZipC__c.field-meta.xml
<CustomField>
    <fullName>ZipC__c</fullName>
    <label>Campus Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>