force-app/main/default/objects/Student__c/fields/ZipP__c.field-meta.xml
<CustomField>
    <fullName>ZipP__c</fullName>
    <label>Permanent Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>