force-app/main/default/objects/Student__c/recordTypes/Graduated_Student.recordType-meta.xml
<RecordType>
    <fullName>Graduated_Student</fullName>
    <active>true</active>
    <label>Graduated Student</label>
</RecordType>