force-app/main/default/objects/Student__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>School__c</columns>
    <columns>Graduated__c</columns>
    <columns>Graduation_Date__c</columns>
    <columns>CE_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>