force-app/main/default/objects/Student__c/listViews/All_Students.listView-meta.xml
<ListView>
    <fullName>All_Students</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Last_Name__c</field>
        <operation>equals</operation>
        <value>Harwood</value>
    </filters>
    <filters>
        <field>First_Name__c</field>
        <operation>equals</operation>
        <value>John</value>
    </filters>
    <label>All Students</label>
</ListView>