force-app/main/default/objects/Student__c/listViews/All_Undergraduates.listView-meta.xml
<ListView>
    <fullName>All_Undergraduates</fullName>
    <columns>NAME</columns>
    <columns>Do_Not_Contact__c</columns>
    <columns>School__c</columns>
    <columns>Graduation_Date__c</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Graduated__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Graduation_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>2012</value>
    </filters>
    <label>All Undergraduates</label>
</ListView>