force-app/main/default/objects/Student__c/listViews/Auburn.listView-meta.xml
<ListView>
    <fullName>Auburn</fullName>
    <columns>NAME</columns>
    <columns>CE_Status__c</columns>
    <columns>Do_Not_Contact__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Program__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>School__c</field>
        <operation>equals</operation>
        <value>Auburn University</value>
    </filters>
    <label>Auburn</label>
</ListView>