force-app/main/default/objects/Student__c/listViews/Blackboard_F2012.listView-meta.xml
<ListView>
    <fullName>Blackboard_F2012</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>School__c</columns>
    <columns>Email__c</columns>
    <columns>Graduation_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CE_Status__c</field>
        <operation>equals</operation>
        <value>Blackboard Summer 2012 Applicant</value>
    </filters>
    <filters>
        <field>School__c</field>
        <operation>equals</operation>
    </filters>
    <label>Blackboard F2012</label>
</ListView>