force-app/main/default/objects/Student__c/listViews/Blackboard_Recruiting.listView-meta.xml
<ListView>
    <fullName>Blackboard_Recruiting</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CE_Status__c</field>
        <operation>equals</operation>
        <value>Blackboard Fall 2012 Promoter</value>
    </filters>
    <label>Blackboard Recruiting</label>
</ListView>