force-app/main/default/objects/Student__c/listViews/Convention_Contacts.listView-meta.xml
<ListView>
    <fullName>Convention_Contacts</fullName>
    <columns>NAME</columns>
    <columns>CE_Status__c</columns>
    <columns>Campus_City__c</columns>
    <columns>School__c</columns>
    <columns>Graduation_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CE_Status__c</field>
        <operation>equals</operation>
        <value>Convention Contact</value>
    </filters>
    <label>Convention Contacts</label>
</ListView>